MW4-45 - Added IntegrationExecution service

--- a/config.json
+++ b/config.json
@@ -4,5 +4,6 @@
         "/openlmis-referencedata-ui",
         "/openlmis-ui-components",
         "/openlmis-ui-layout"
-    ]
+    ],
+    "dhis2ServiceUrl":"/"
 }
