--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   dhis2-integration-ui:
-    image: openlmis/dev-ui:9.0.2-RC1
+    image: openlmis/dev-ui:9.0.2
     ports:
       - "9000:9000"
       - "9876:9876"
@@ -21,22 +21,22 @@ services:
       - ui-layout
 
   auth-ui:
-    image: openlmis/auth-ui:6.2.6-RC1
+    image: openlmis/auth-ui:6.2.6
     volumes:
       - '/openlmis-auth-ui'
 
   referencedata-ui:
-    image: openlmis/referencedata-ui:5.6.5-RC1
+    image: openlmis/referencedata-ui:5.6.5
     volumes:
       - '/openlmis-referencedata-ui'
 
   ui-components:
-    image: openlmis/ui-components:7.2.5-RC1
+    image: openlmis/ui-components:7.2.5
     volumes:
       - '/openlmis-ui-components'
 
   ui-layout:
-    image: openlmis/ui-layout:5.1.9-RC1
+    image: openlmis/ui-layout:5.1.9
     volumes:
       - '/openlmis-ui-layout'
 
