--- a/project.properties
+++ b/project.properties
@@ -1,4 +1,4 @@
-version=1.0.2-SNAPSHOT
+version=1.0.2
 projectName=OpenLMIS MW DHIS2 Integration UI
 projectKey=dhis2-integration-ui
 transifexProject=mw-dhis2-integration-ui
